// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`customers reducers bulk delete 1`] = `
Immutable.Map {
  active: Immutable.Map {
  },
  items: Immutable.List [
    Immutable.Map {
      id: 3,
      name: "Julien",
    },
  ],
  customerHistory: Immutable.Map {
    triedLoading: false,
    hasHistory: false,
    tickets: Immutable.List [
    ],
    events: Immutable.List [
    ],
  },
  _internal: Immutable.Map {
    loading: Immutable.Map {
      history: false,
      active: false,
      merge: false,
    },
  },
}
`;

exports[`customers reducers clear customer 1`] = `
Object {
  "_internal": Object {
    "loading": Object {
      "active": false,
      "history": false,
      "merge": false,
    },
  },
  "active": Object {},
  "customerHistory": Object {
    "events": Array [],
    "hasHistory": false,
    "tickets": Array [],
    "triedLoading": false,
  },
  "items": Array [],
}
`;

exports[`customers reducers clear ticket 1`] = `
Object {
  "_internal": Object {
    "loading": Object {
      "active": false,
      "history": false,
      "merge": false,
    },
  },
  "active": Object {},
  "customerHistory": Object {
    "events": Array [],
    "hasHistory": false,
    "tickets": Array [],
    "triedLoading": false,
  },
  "items": Array [],
}
`;

exports[`customers reducers delete customer 1`] = `
Immutable.Map {
  active: Immutable.Map {
  },
  items: Immutable.List [
    Immutable.Map {
      id: 1,
    },
  ],
  customerHistory: Immutable.Map {
    triedLoading: false,
    hasHistory: false,
    tickets: Immutable.List [
    ],
    events: Immutable.List [
    ],
  },
  _internal: Immutable.Map {
    loading: Immutable.Map {
      history: false,
      active: false,
      merge: false,
    },
  },
}
`;

exports[`customers reducers fetch customer 1`] = `
Object {
  "_internal": Object {
    "loading": Object {
      "active": true,
      "history": false,
      "merge": false,
    },
  },
  "active": Object {},
  "customerHistory": Object {
    "events": Array [],
    "hasHistory": false,
    "tickets": Array [],
    "triedLoading": false,
  },
  "items": Array [],
}
`;

exports[`customers reducers fetch customer 2`] = `
Object {
  "_internal": Object {
    "loading": Object {
      "active": false,
      "history": false,
      "merge": false,
    },
  },
  "active": Object {
    "id": 1,
  },
  "customerHistory": Object {
    "events": Array [],
    "hasHistory": false,
    "tickets": Array [],
    "triedLoading": false,
  },
  "items": Array [],
}
`;

exports[`customers reducers fetch customer 3`] = `
Object {
  "_internal": Object {
    "loading": Object {
      "active": false,
      "history": false,
      "merge": false,
    },
  },
  "active": Object {},
  "customerHistory": Object {
    "events": Array [],
    "hasHistory": false,
    "tickets": Array [],
    "triedLoading": false,
  },
  "items": Array [],
}
`;

exports[`customers reducers fetch customer history 1`] = `
Object {
  "_internal": Object {
    "loading": Object {
      "active": false,
      "history": true,
      "merge": false,
    },
  },
  "active": Object {},
  "customerHistory": Object {
    "events": Array [],
    "hasHistory": false,
    "tickets": Array [],
    "triedLoading": true,
  },
  "items": Array [],
}
`;

exports[`customers reducers fetch customer history 2`] = `
Object {
  "_internal": Object {
    "loading": Object {
      "active": false,
      "history": false,
      "merge": false,
    },
  },
  "active": Object {},
  "customerHistory": Object {
    "events": Array [],
    "hasHistory": true,
    "tickets": Array [
      Object {
        "id": 1,
      },
      Object {
        "id": 2,
      },
    ],
    "triedLoading": true,
  },
  "items": Array [],
}
`;

exports[`customers reducers fetch customer history 3`] = `
Object {
  "_internal": Object {
    "loading": Object {
      "active": false,
      "history": false,
      "merge": false,
    },
  },
  "active": Object {},
  "customerHistory": Object {
    "events": Array [],
    "hasHistory": false,
    "tickets": Array [
      Object {
        "id": 1,
      },
    ],
    "triedLoading": true,
  },
  "items": Array [],
}
`;

exports[`customers reducers fetch customer history 4`] = `
Object {
  "_internal": Object {
    "loading": Object {
      "active": false,
      "history": false,
      "merge": false,
    },
  },
  "active": Object {},
  "customerHistory": Object {
    "events": Array [],
    "hasHistory": false,
    "tickets": Object {},
    "triedLoading": true,
  },
  "items": Array [],
}
`;

exports[`customers reducers fetch list 1`] = `
Immutable.Map {
  active: Immutable.Map {
  },
  items: Immutable.List [
    Immutable.Map {
      name: "Alex",
    },
    Immutable.Map {
      name: "Romain",
    },
  ],
  customerHistory: Immutable.Map {
    triedLoading: false,
    hasHistory: false,
    tickets: Immutable.List [
    ],
    events: Immutable.List [
    ],
  },
  _internal: Immutable.Map {
    loading: Immutable.Map {
      history: false,
      active: false,
      merge: false,
    },
  },
}
`;

exports[`customers reducers fetch list 2`] = `
Immutable.Map {
  active: Immutable.Map {
  },
  items: Immutable.List [
  ],
  customerHistory: Immutable.Map {
    triedLoading: false,
    hasHistory: false,
    tickets: Immutable.List [
    ],
    events: Immutable.List [
    ],
  },
  _internal: Immutable.Map {
    loading: Immutable.Map {
      history: false,
      active: false,
      merge: false,
    },
  },
}
`;

exports[`customers reducers merge customers 1`] = `
Object {
  "_internal": Object {
    "loading": Object {
      "active": false,
      "history": false,
      "merge": true,
    },
  },
  "active": Object {},
  "customerHistory": Object {
    "events": Array [],
    "hasHistory": false,
    "tickets": Array [],
    "triedLoading": false,
  },
  "items": Array [],
}
`;

exports[`customers reducers merge customers 2`] = `
Object {
  "_internal": Object {
    "loading": Object {
      "active": false,
      "history": false,
      "merge": false,
    },
  },
  "active": Object {
    "id": 1,
    "name": "Alex",
  },
  "customerHistory": Object {
    "events": Array [],
    "hasHistory": false,
    "tickets": Array [],
    "triedLoading": false,
  },
  "items": Array [],
}
`;

exports[`customers reducers merge customers 3`] = `
Object {
  "_internal": Object {
    "loading": Object {
      "active": false,
      "history": false,
      "merge": false,
    },
  },
  "active": Object {
    "id": 1,
    "name": "Romain",
  },
  "customerHistory": Object {
    "events": Array [],
    "hasHistory": false,
    "tickets": Array [],
    "triedLoading": false,
  },
  "items": Array [],
}
`;

exports[`customers reducers submit customer 1`] = `
Object {
  "_internal": Object {
    "loading": Object {
      "active": false,
      "history": false,
      "merge": false,
    },
  },
  "active": Object {},
  "customerHistory": Object {
    "events": Array [],
    "hasHistory": false,
    "tickets": Array [],
    "triedLoading": false,
  },
  "items": Array [],
}
`;

exports[`customers reducers submit customer 2`] = `
Object {
  "_internal": Object {
    "loading": Object {
      "active": false,
      "history": false,
      "merge": false,
    },
  },
  "active": Object {
    "id": 1,
    "name": "Romain",
  },
  "customerHistory": Object {
    "events": Array [],
    "hasHistory": false,
    "tickets": Array [],
    "triedLoading": false,
  },
  "items": Array [
    Object {
      "id": 1,
      "name": "Romain",
    },
  ],
}
`;

exports[`customers reducers submit customer 3`] = `
Object {
  "_internal": Object {
    "loading": Object {
      "active": false,
      "history": false,
      "merge": false,
    },
  },
  "active": Object {
    "id": 1,
    "name": "Romain",
  },
  "customerHistory": Object {
    "events": Array [],
    "hasHistory": false,
    "tickets": Array [],
    "triedLoading": false,
  },
  "items": Array [
    Object {
      "id": 1,
      "name": "Romain",
    },
  ],
}
`;

exports[`customers reducers submit customer 4`] = `
Object {
  "_internal": Object {
    "loading": Object {
      "active": false,
      "history": false,
      "merge": false,
    },
  },
  "active": Object {},
  "customerHistory": Object {
    "events": Array [],
    "hasHistory": false,
    "tickets": Array [],
    "triedLoading": false,
  },
  "items": Array [],
}
`;
